testsuite/tests/typecheck/should_fail/T20241b.stderr
T20241b.hs:16:8: error: [GHC-47403]
    • Boom
    • In the type signature:
        foo :: ((TypeError (Text "Boom") :: (Type -> Type)
                                            -> Type -> Constraint) IO) a =>
               Proxy a -> ()

T20241b.hs:20:8: error: [GHC-64725]
    • Boom
    • In the ambiguity check for ‘bar’
      To defer the ambiguity check to use sites, enable AllowAmbiguousTypes
      In the type signature:
        bar :: ((c :: Constraint
                      -> Type -> Constraint) (((TypeError (Text "Boom") :: (Type -> Type)
                                                                           -> Type
                                                                              -> Constraint) IO) a)) a =>
               Proxy a -> ()

